--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ rvm:
   - jruby-18mode
   - jruby-19mode
   - ree
-  - rbx-18mode
-  - rbx-19mode
+  - rbx-2.2.1
+  - rbx
   - 2.0.0
 matrix:
   allow_failures:
-    - rvm: rbx-19mode
-    - rvm: rbx-18mode
+    - rvm: rbx-2.2.1
+    - rvm: rbx
 
