--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,11 @@ rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
+  - 2.0.0
+  - 2.1.0-preview2
   - jruby-18mode
   - jruby-19mode
   - ree
   - rbx-2.2.1
   - rbx
-  - 2.0.0
-matrix:
-  allow_failures:
-    - rvm: rbx-2.2.1
-    - rvm: rbx
 
