Add temporary workaround for failing build on Ruby 1.8.7 Rubygems broke builds on Ruby 1.8.7:
travis-ci/travis-ci#1793
rubygems/rubygems#763

This patch is a temporary workaround until rubygems is updated.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,8 @@ rvm:
   - ree
   - rbx-2.2.1
   - rbx
-
+before_install:
+  - gem update bundler
+  - bundle --version
+  - gem update --system 2.1.11
+  - gem --version
