--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
-language: ruby
-script: "script/test_all 2>&1"
-bundler_args: "--standalone --binstubs"
+# This file was generated on 2014-01-24T19:39:30-08:00 from the rspec-dev repo.
+# DO NOT modify it by hand as your changes will get lost the next time it is generated.
+
+before_install: "script/clone_all_rspec_repos"
+bundler_args: "--binstubs --standalone --without documentation --path ../bundle"
+script: "script/run_build"
 rvm:
   - 1.8.7
   - 1.9.2
   - 1.9.3
   - 2.0.0
   - 2.1.0
+  - ruby-head
   - ree
   - jruby-18mode
   - jruby-19mode
-  - rbx-2.2.1
+  - jruby-head
   - rbx
 matrix:
   allow_failures:
-    - rvm: rbx-2.2.1
-    - rvm: rbx
-before_install:
-  - gem update bundler
-  - bundle --version
-  - gem update --system 2.1.11
-  - gem --version
+    - rvm: jruby-head
+    - rvm: ruby-head
+  fast_finish: true
+
