Updated travis build scripts (from rspec-dev)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# This file was generated on 2014-01-25T09:32:04-08:00 from the rspec-dev repo.
+# This file was generated on 2014-02-08T14:27:25+11:00 from the rspec-dev repo.
 # DO NOT modify it by hand as your changes will get lost the next time it is generated.
 
 before_install: "script/clone_all_rspec_repos"
@@ -13,11 +13,12 @@ rvm:
   - ruby-head
   - ree
   - jruby-18mode
-  - jruby-19mode
+  - jruby
   - jruby-head
   - rbx
 matrix:
   allow_failures:
+    - rvm: jruby-18mode
     - rvm: jruby-head
     - rvm: ruby-head
   fast_finish: true
