--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# This file was generated on 2014-02-08T14:27:25+11:00 from the rspec-dev repo.
+# This file was generated on 2014-02-12T08:24:06+11:00 from the rspec-dev repo.
 # DO NOT modify it by hand as your changes will get lost the next time it is generated.
 
 before_install: "script/clone_all_rspec_repos"
@@ -18,7 +18,7 @@ rvm:
   - rbx
 matrix:
   allow_failures:
-    - rvm: jruby-18mode
     - rvm: jruby-head
     - rvm: ruby-head
+    - rvm: rbx
   fast_finish: true
